main_branch_code/k8s-hostbased-https/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-deploy
spec:
  replicas: 3
  selector:
     matchLabels:
        app.kubernetes.io/name: ecom
  template:
     metadata:
      labels:
        app.kubernetes.io/name: ecom
     spec:
      containers:
        - name: ecom-containers
          image: chetansingh673/multibranch-flask-app:build-3
          ports:
            - containerPort: 5000
