main_branch_code/k8s-hostbased-https/service.yaml
apiVersion: v1
kind: Service  
metadata:
  name: ecom-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ecom
  ports:
    - port: 80
      targetPort: 5000
